--- a/README.Rmd
+++ b/README.Rmd
@@ -9,101 +9,8 @@ knitr::opts_chunk$set(
   fig.path = "man/figures/"
 )
 ```
-
-# campsismod <img src='man/figures/logo.png' align="right" alt="" width="120" />
-
-<!-- badges: start -->
-[![R-CMD-check](https://github.com/Calvagone/campsismod/workflows/R-CMD-check/badge.svg)](https://github.com/Calvagone/campsismod/actions)
-[![codecov](https://codecov.io/gh/Calvagone/campsismod/branch/main/graph/badge.svg?token=7DHBRQD7AG)](https://app.codecov.io/gh/Calvagone/campsismod)
-[![CRAN version](http://www.r-pkg.org/badges/version/campsismod)](https://cran.r-project.org/package=campsismod)
-[![CRAN total downloads](https://cranlogs.r-pkg.org/badges/grand-total/campsismod)](https://cran.r-project.org/package=campsismod)
-[![CRAN total downloads](https://cranlogs.r-pkg.org/badges/campsismod)](https://cran.r-project.org/package=campsismod)
-<!-- badges: end -->
-
-```{r, echo=FALSE, warning=FALSE, message=FALSE, results='hide'}
-EXPORT_PNG <- FALSE
-```
   
-## Installation
-Install the latest stable release using `devtools`:
+## Campsisverse
+
+The official R package manager of the Campsis suite.
   
-```{r, eval=FALSE}
-devtools::install_github("Calvagone/campsismod")
-```
-
-## Basic examples
-
-### Load example from model library
-
-Load 2-compartment PK model from built-in model library:
-
-```{r message=FALSE}
-library(campsismod)
-model <- model_suite$pk$`2cpt_fo`
-```
-
-### Write CAMPSIS model
-
-```{r message=FALSE, results='hide'}
-model %>% write(file="path_to_model_folder")
-```
-
-```{r}
-list.files("path_to_model_folder")
-```
-
-### Read and show CAMPSIS model
-
-```{r}
-model <- read.campsis(file="path_to_model_folder")
-show(model)
-```
-
-### Simulate with rxode2 or mrgsolve
-
-```{r, eval=EXPORT_PNG}
-library(campsis)
-
-dataset <- Dataset(5) %>%
-  add(Bolus(time=0, amount=1000, ii=12, addl=2)) %>%
-  add(Observations(times=0:36))
-
-rxode <- model %>% simulate(dataset=dataset, dest="rxode2", seed=0)
-mrgsolve <- model %>% simulate(dataset=dataset, dest="mrgsolve", seed=0)
-```
-
-```{r, eval=EXPORT_PNG}
-spaghettiPlot(rxode, "CONC")
-```
-
-```{r, echo=FALSE, results='hide'}
-file_vignette <- "vignettes/resources/results_rxode.png"
-```
-
-```{r, eval=EXPORT_PNG, echo=FALSE, results='hide'}
-ggplot2::ggsave(filename=file_vignette, width=7, height=3, dpi=100)
-```
-
-```{r, eval=EXPORT_PNG, echo=EXPORT_PNG, results='hide'}
-file.copy(file_vignette, "docs/articles/resources/")
-```
-
-![RxODE simulation results](vignettes/resources/results_rxode.png)
-
-```{r, eval=EXPORT_PNG}
-spaghettiPlot(mrgsolve, "CONC")
-```
-
-```{r, echo=FALSE, results='hide'}
-file_vignette <- "vignettes/resources/results_mrgsolve.png"
-```
-
-```{r, eval=EXPORT_PNG, echo=FALSE, results='hide'}
-ggplot2::ggsave(filename=file_vignette, width=7, height=3, dpi=100)
-```
-
-```{r, eval=EXPORT_PNG, echo=EXPORT_PNG, results='hide'}
-file.copy(file_vignette, "docs/articles/resources/")
-```
-
-![mrgsolve simulation results](vignettes/resources/results_mrgsolve.png)
