--- a/README.Rmd
+++ b/README.Rmd
@@ -2,11 +2,11 @@
 output: github_document
 ---
   
-## Campsisverse
+# campsisverse <img src='man/figures/logo.png' align="right" alt="" width="120" />
 
 The official R package manager of the Campsis suite.
 
-### Install Campsisverse
+## Install Campsisverse
 
 Install the Campsisverse package with the following command:
 
@@ -14,7 +14,7 @@ Install the Campsisverse package with the following command:
 remotes::install_github("Calvagone/campsisverse")
 ```
   
-### Restore the Campsis suite
+## Restore the Campsis suite
 
 Restoring the Campsis suite into your R distribution is easy. Just run the following command:
 
@@ -34,7 +34,7 @@ campsisverse::restore(version="24-12-01", no_deps=TRUE)
 
 Please be aware that setting `no_deps` to TRUE may cause unexpected behavior of some Campsis packages. In any case, we recommend using our qualification package to validate the correct functioning of Campsis. Please visit the [Campsisqual repository](https://github.com/Calvagone/campsisqual) for more information.
 
-### Running the Campsis suite in a sandbox with renv
+## Running the Campsis suite in a sandbox with renv
 
 The Campsis suite can be run in a sandbox environment using the `use` function. This function is useful when you want to run the Campsis suite in a temporary environment without affecting your current R distribution. 
 
