Use renv::init with bare=TRUE in README.

--- a/README.Rmd
+++ b/README.Rmd
@@ -68,13 +68,13 @@ Please be aware that setting `no_deps` to TRUE may cause unexpected behavior of 
 
 ### Using the 'restore' function within your renv project
 
-You can initialise and activate a renv project by typing:
+Initialize a new project (with an empty R library) by typing the following command in your R console:
 
 ```{r eval=FALSE}
-renv::init()
+renv::init(bare=TRUE)
 ```
 
-Then, you can restore the Campsis suite into your project by running:
+Then, restore the Campsis suite into your project as follows:
 
 ```{r eval=FALSE}
 renv::install("Calvagone/campsisverse")
